--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,25 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAjh4hNpSJmytZ_9uvabBuCw0jo07U8_WA",
+      authDomain: "feedbackapp-ff61c.firebaseapp.com",
+      projectId: "feedbackapp-ff61c",
+      storageBucket: "feedbackapp-ff61c.firebasestorage.app",
+      messagingSenderId: "152099001125",
+      appId: "1:152099001125:web:2c7994b8558629983600cc"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
